# privacy-local-agent

./: .dockerignore  .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  SECURITY.md  mkdocs.yml  pyproject.toml  requirements-core.txt  requirements-ml.txt  requirements.txt
.github/workflows/: ci.yml
config/: personalized-profiles.yaml
console/: .gitignore  README.md  start-all.sh  start-go-mtls.sh  start-go.sh  start.sh  stop-all.sh  stop-go.sh  stop.sh
console/backend/: README.md  smoke_test.py
console/backend-go/: .gitignore  Makefile  go.mod
console/backend-go/docs/: README.md  api_reference.md  design.md  ops.md  test.md  testing.md
console/docs/: modes.md  vite.md
console/web/: README.md  package-lock.json  package.json  pnpm-lock.yaml  vite.config.ts
deploy/docker-compose/: docker-compose.yml  privacy-profile.yaml
deploy/grafana/: dashboard.json
deploy/k8s/: configmap.yaml  deployment.yaml  kustomization.yaml  namespace.yaml  secret.example.yaml  service.yaml
deploy/prometheus/: alerts.yml
docs/: architecture-design.md  architecture-summary.md  index.md  personalized_profiles.md  production_improvements.md
docs/classification/: README.md  api_reference.md  design.md  examples.md  ops.md  performance.md  prd.md  testing.md
docs/classification_llm/: README.md  api_reference.md  design.md  examples.md  ops.md  prd.md  testing.md
docs/classification_ner/: README.md  api_reference.md  design.md  examples.md  ops.md  prd.md  testing.md
docs/console_backend/: README.md  design.md  ops.md  prd.md
docs/console_web/: README.md  api_reference.md  testing.md
docs/deployment/: README.md  design.md  examples.md  ops.md  prd.md  testing.md
docs/dp/: README.md  api_reference.md  design.md  examples.md  ops.md  prd.md  testing.md
docs/gateway_balancer/: README.md  api_reference.md  design.md  examples.md  ops.md  optimizations.md  prd.md  testing.md
docs/k_anonymity/: README.md  api_reference.md  design.md  examples.md  ops.md  prd.md  testing.md
docs/masking/: README.md  api_reference.md  design.md  examples.md  ops.md  prd.md  testing.md
docs/production_observability/: README.md  api_reference.md  design.md  examples.md  ops.md  prd.md  testing.md
docs/production_security/: README.md  api_reference.md  design.md  examples.md  ops.md  prd.md  testing.md
docs/qol/: README.md  api_reference.md  design.md  examples.md  ops.md  prd.md  testing.md
frontend/: .gitignore  README.md  start-all.sh  start-go-mtls.sh  start-go.sh  start.sh  stop-all.sh  stop-go.sh  stop.sh
frontend/backend/: README.md  requirements.txt  run.sh  smoke_test.py
frontend/backend-go/: .gitignore  Makefile  go.mod  go.sum  run.sh
frontend/web/: README.md  index.html  pnpm-lock.yaml  pnpm-workspace.yaml  vite.config.ts
privacy_local_agent/: __init__.py  classification_grpc.py  classification_routes.py  classification_service.py  deps.py  grpc_server.py  main.py  privacy_pb2.py  privacy_pb2_grpc.py  schemas.py  server.py  service.py
privacy_local_agent/gateway/: __init__.py  balancer.py  grpc_proxy.py  http_proxy.py  server.py
privacy_local_agent/observability/: __init__.py  context.py  logging_config.py  metrics.py  middleware.py  tracing.py
privacy_local_agent/privacy/: __init__.py  budget.py  classification.py  classification_async.py  classification_composite.py  classification_llm.py  classification_models.py  classification_ner.py  classification_review.py  classification_rule_engine.py  classification_secretflow.py  classification_templates.py  classification_utils.py  classification_vectorized.py  classification_zero_knowledge.py  data_adapters.py  download_model.py  download_ner_model.py  dp.py  kano.py  kano_table.py  local_dp.py  masking.py  profile.py  qol.py
privacy_local_agent/routers/: __init__.py  budget.py  dp.py  file.py  health.py  kano.py  ldp.py  mask.py  profile.py  qol.py
privacy_local_agent/security/: __init__.py  auth.py  config.py  identity.py  ratelimit.py  tls.py
proto/: privacy.proto
scripts/: gen_medical_images.py
tests/: benchmark_classification.py  benchmark_primitives.py  conftest.py  personalized-profiles.yaml  security_certs.py  test_agent_optimizations.py  test_budget.py  test_budget_concurrency.py  test_classification.py  test_classification_async.py  test_classification_composite.py  test_classification_grpc.py  test_classification_llm.py  test_classification_ner.py  test_classification_real_models.py  test_classification_rest.py  test_classification_review.py  test_classification_secretflow.py  test_classification_shadow.py  test_classification_templates.py  test_classification_utils_extra.py  test_classification_vectorized.py  test_classification_zk.py  test_data_adapters.py  test_deployment.py  test_dp.py  test_dp_distributions.py  test_dp_property.py  test_gateway.py  test_grpc.py  test_kano_table.py  test_kano_table_internal.py  test_local_dp.py  test_masking.py  test_observability.py  test_privacy_adapters.py  test_process_file.py  test_qol.py  test_qol_semantic.py  test_rest.py  (+4 more)
tests/api/: test_grpc.py  test_rest.py
tests/classification/: __init__.py  test_classification.py  test_classification_async.py  test_classification_composite.py  test_classification_llm.py  test_classification_ner.py  test_classification_real_models.py  test_classification_review.py  test_classification_secretflow.py  test_classification_templates.py  test_classification_utils_extra.py  test_classification_vectorized.py  test_classification_zk.py
tests/deployment/: __init__.py  test_deployment.py
tests/gateway/: __init__.py  test_gateway.py
tests/observability/: __init__.py  test_observability.py
tests/privacy/: __init__.py  test_agent_optimizations.py  test_budget.py  test_budget_concurrency.py  test_dp.py  test_dp_distributions.py  test_dp_property.py  test_kano_table.py  test_masking.py  test_privacy_adapters.py  test_qol.py  test_qol_semantic.py
tests/security/: test_security_grpc.py  test_security_tls.py  test_security_unit.py
(+151 files in other folders)
