[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "privacy-local-agent"
version = "0.1.0"
description = "Local REST/gRPC agent for privacy primitives"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.27.0",
    "pydantic>=2.6.0",
    "grpcio>=1.62.0,<1.63.0",
    "protobuf>=4.25.0,<5.0.0",
    "pyyaml>=6.0.1",
    "httpx>=0.27.0",
    "limits>=3.10.0",
    "python-json-logger>=2.0.7",
    "prometheus-client>=0.20.0",
    "numpy>=1.24.0,<2.0.0",
    "pandas>=2.0.0,<2.3.0",
    "pyarrow>=14.0.0,<15.0.0",
]

[project.optional-dependencies]
dev = [
    "grpcio-tools>=1.62.0,<1.63.0",
    "pytest>=8.0.0",
    "hypothesis>=6.0.0",
    "scipy>=1.12.0,<1.13.0",
]
observability = [
    "opentelemetry-api>=1.24.0",
    "opentelemetry-sdk>=1.24.0",
    "opentelemetry-instrumentation-fastapi>=0.45b0",
    "opentelemetry-instrumentation-grpc>=0.45b0",
    "opentelemetry-exporter-otlp>=1.24.0",
]
ml = [
    "torch>=2.2.0",
    "transformers>=4.38.0",
    "onnxruntime>=1.17.0",
    "pillow>=10.2.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["privacy_local_agent*"]
