[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "privacy-local-agent"
version = "0.1.0"
description = "Local REST/gRPC agent for privacy primitives"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.27.0",
    "python-multipart>=0.0.9",
    "pydantic>=2.6.0",
    "grpcio>=1.62.0,<2.0.0",
    "protobuf>=4.25.0,<8.0.0",
    "pyyaml>=6.0.1",
    "httpx>=0.27.0",
    "limits>=3.10.0",
    "python-json-logger>=2.0.7",
    "prometheus-client>=0.20.0",
    "numpy>=1.24.0,<3.0.0",
    "pandas>=2.0.0,<4.0.0",
    "pyarrow>=14.0.0,<26.0.0",
]

[project.optional-dependencies]
dev = [
    "grpcio-tools>=1.62.0,<2.0.0",
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "pytest-benchmark>=4.0.0",
    "hypothesis>=6.0.0",
    "scipy>=1.12.0,<2.0.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
    "pre-commit>=3.7.0",
]
observability = [
    "opentelemetry-api>=1.24.0",
    "opentelemetry-sdk>=1.24.0",
    "opentelemetry-instrumentation-fastapi>=0.45b0",
    "opentelemetry-instrumentation-grpc>=0.45b0",
    "opentelemetry-exporter-otlp>=1.24.0",
]
ml = [
    "torch>=2.2.0",
    "transformers>=4.38.0",
    "onnxruntime>=1.17.0",
    "pillow>=10.2.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["privacy_local_agent*"]

# ── Ruff (lint + format) ─────────────────────────────────────
[tool.ruff]
target-version = "py310"
line-length = 100
src = ["privacy_local_agent", "tests"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "N",    # pep8-naming
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "S",    # flake8-bandit (security)
    "A",    # flake8-builtins
    "C4",   # flake8-comprehensions
    "SIM",  # flake8-simplify
    "TCH",  # flake8-type-checking
    "RUF",  # ruff-specific
]
ignore = [
    "S101",   # assert allowed in tests
    "S104",   # bind to all interfaces (needed for container)
    "S311",   # pseudo-random generators OK for DP noise
    "S324",   # hashlib.md5/sha1 OK for non-security use
    "B008",   # function calls in defaults (FastAPI Depends)
    "B905",   # zip without explicit strict
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S", "B011"]
"privacy_local_agent/privacy_pb2*.py" = ["E", "F", "N", "UP"]

[tool.ruff.lint.isort]
known-first-party = ["privacy_local_agent"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

# ── mypy ─────────────────────────────────────────────────────
[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
check_untyped_defs = true
ignore_missing_imports = true
exclude = [
    "privacy_local_agent/privacy_pb2.*",
    "privacy_local_agent/privacy_pb2_grpc.*",
]

# ── pytest + coverage ────────────────────────────────────────
[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "integration: marks tests as integration tests (deselect with '-m \"not integration\"')",
    "slow: marks tests as slow-running",
    "real_models: marks tests that require downloaded NER/Qwen2-VL models and ML deps (run in a separate process; auto-skip when unavailable)",
]
addopts = "-q --tb=short"

[tool.coverage.run]
source = ["privacy_local_agent"]
omit = [
    "privacy_local_agent/privacy_pb2*",
    "privacy_local_agent/privacy_pb2_grpc*",
    "*/tests/*",
    # 进程入口 / 模型下载脚本：仅含启动与网络下载逻辑，无法在单测中覆盖
    "privacy_local_agent/server.py",
    "privacy_local_agent/gateway/server.py",
    "privacy_local_agent/privacy/download_model.py",
    "privacy_local_agent/privacy/download_ner_model.py",
]

[tool.coverage.report]
show_missing = true
skip_covered = true
fail_under = 80
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.",
    "raise NotImplementedError",
]
