[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "privacy-local-agent"
version = "0.1.0"
description = "Local REST/gRPC agent for privacy primitives"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.27.0",
    "python-multipart>=0.0.9",
    "pydantic>=2.6.0",
    "grpcio>=1.62.0,<2.0.0",
    "protobuf>=4.25.0,<8.0.0",
    "pyyaml>=6.0.1",
    "httpx>=0.27.0",
    "limits>=3.10.0",
    "cryptography>=42.0.0",
    "python-json-logger>=2.0.7",
    "prometheus-client>=0.20.0",
    "numpy>=1.24.0,<3.0.0",
    "pandas>=2.0.0,<4.0.0",
    "pyarrow>=14.0.0,<26.0.0",
]

[project.optional-dependencies]
dev = [
    "grpcio-tools>=1.62.0,<2.0.0",
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "pytest-benchmark>=4.0.0",
    "hypothesis>=6.0.0",
    "scipy>=1.12.0,<2.0.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
    "pre-commit>=3.7.0",
]
observability = [
    # 可观测性相关依赖：仅在需要 OpenTelemetry / OTLP 导出时安装。
    # 这样可以避免核心 REST/gRPC 路径引入额外运行时开销。
    "opentelemetry-api>=1.24.0",
    "opentelemetry-sdk>=1.24.0",
    "opentelemetry-instrumentation-fastapi>=0.45b0",
    "opentelemetry-instrumentation-grpc>=0.45b0",
    "opentelemetry-exporter-otlp>=1.24.0",
]
ml = [
    # ML 相关依赖全部保持“可选”，用于更强的多模态分类、NER 和模型推理。
    # 设计目标是：缺少这些包时，服务仍能启动，并自动退化到规则/轻量实现，
    # 方便本地开发、CI，以及不需要大模型的部署环境。
    "torch>=2.2.0",
    # torchvision 为 qwen-vl-utils 多模态图片预处理的运行时依赖
    "torchvision>=0.17.0",
    "transformers>=4.45.0,<5.0",
    "accelerate>=0.30.0",
    "onnxruntime>=1.17.0",
    "pillow>=10.2.0",
    # Qwen2-VL 多模态图片预处理（可选，缺失时自动降级为直接传图）
    "qwen-vl-utils>=0.0.8",
    # ModelScope Small-NER 推理后端（可选，缺失时 NER 层自动降级；datasets 为其运行时依赖）
    "modelscope>=1.20.0",
    "datasets>=4.0.0,<=4.8.4",
]
docs = [
    # 文档站点构建依赖：仅在生成 MkDocs 文档时需要。
    "mkdocs>=1.6.0",
    "mkdocs-material>=9.5.0",
    "mkdocs-minify-plugin>=0.8.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["privacy_local_agent*"]

# ── Ruff (lint + format) ─────────────────────────────────────
[tool.ruff]
# 这个仓库是“根级配置 + 多子项目”结构：
# - `privacy_local_agent` 是主包
# - `tests` 是主测试集
# - `console/backend` 是同仓库中的辅助后端
# 因此这里将多个源码根目录一起纳入 lint/format 规则。
target-version = "py310"
line-length = 120
src = ["privacy_local_agent", "tests", "console/backend"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "N",    # pep8-naming
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "S",    # flake8-bandit (security)
    "A",    # flake8-builtins
    "C4",   # flake8-comprehensions
    "SIM",  # flake8-simplify
    "TCH",  # flake8-type-checking
    "RUF",  # ruff-specific
]
ignore = [
    "S101",   # assert allowed in tests
    "S104",   # bind to all interfaces (needed for container)
    # S311：项目中部分差分隐私（DP）噪声生成需要可重复、可控的伪随机源，
    # 并非用于密码学场景，因此不强制替换为密码学安全 RNG。
    "S311",   # pseudo-random generators OK for DP noise
    # S324：有些非安全用途（例如数据索引、兼容性哈希或轻量标识）会使用 MD5/SHA1，
    # 这里明确豁免，避免后续自动修复把这些实现误改成更重但不必要的方案。
    "S324",   # hashlib.md5/sha1 OK for non-security use
    "B008",   # function calls in defaults (FastAPI Depends)
    "B905",   # zip without explicit strict
    "RUF001", # Chinese full-width chars in strings are intentional
    "RUF002", # Chinese full-width chars in docstrings are intentional
    "RUF003", # Chinese full-width chars in comments are intentional
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S", "B011"]
"console/backend/tests/**" = ["S", "B011"]
"console/backend/app/fixtures/samples.py" = ["E501"]
"privacy_local_agent/privacy_pb2*.py" = ["E", "F", "N", "UP"]
"privacy_local_agent/grpc_server.py" = ["N802"]
"privacy_local_agent/classification_grpc.py" = ["N802"]

[tool.ruff.lint.isort]
known-first-party = ["privacy_local_agent"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

# ── mypy ─────────────────────────────────────────────────────
[tool.mypy]
# 这里同样覆盖 `console/backend`，因为它共享一部分仓库级约束和公共代码风格。
# 统一检查可以减少主包与控制台后端之间的接口漂移。
# python_version 使用 3.12 是为了兼容 numpy 2.x stub 中的 PEP 695 type 语句；
# 项目运行时仍要求 Python >=3.10，运行时测试在 3.13 下执行。
python_version = "3.12"
plugins = ["pydantic.mypy"]
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
check_untyped_defs = true
ignore_missing_imports = true
implicit_optional = true
files = ["privacy_local_agent", "console/backend", "tests"]
exclude = [
    "privacy_local_agent/privacy_pb2.*",
    "privacy_local_agent/privacy_pb2_grpc.*",
    "console/backend/tests",
]

[[tool.mypy.overrides]]
# protobuf 生成模块的属性 mypy 无法识别（生成的描述符动态注入），
# 直接跳过对这两个模块的导入分析，避免从它们导入的模块产生大量 has no attribute 错误。
module = ["privacy_local_agent.privacy_pb2", "privacy_local_agent.privacy_pb2_grpc"]
follow_imports = "skip"

[[tool.mypy.overrides]]
# 测试文件以功能验证为主，历史上积累了大量 numpy/pandas/scipy 类型推断问题，
# 本次先忽略以解决 numpy 2.x 兼容的阻塞问题，后续再逐步修复。
module = ["tests.*"]
ignore_errors = true

[[tool.mypy.overrides]]
# privacy/dp.py 包含大量 scipy sparse / numpy ndarray 类型推断与 Union 分发问题，
# 短期内难以逐项修复，先忽略以解决 numpy 2.x stub 兼容的阻塞问题。
module = ["privacy_local_agent.privacy.dp"]
ignore_errors = true

# ── pytest + coverage ────────────────────────────────────────
[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "integration: marks tests as integration tests (deselect with '-m \"not integration\"')",
    "slow: marks tests as slow-running",
    "real_models: marks tests that require downloaded NER/Qwen2-VL models and ML deps (run in a separate process; auto-skip when unavailable)",
]
addopts = "-q --tb=short"

[tool.coverage.run]
source = ["privacy_local_agent"]
omit = [
    "privacy_local_agent/privacy_pb2*",
    "privacy_local_agent/privacy_pb2_grpc*",
    "*/tests/*",
    # 进程入口 / 模型下载脚本：仅含启动与网络下载逻辑，无法在单测中覆盖
    "privacy_local_agent/server.py",
    "privacy_local_agent/gateway/server.py",
    "privacy_local_agent/privacy/download_model.py",
    "privacy_local_agent/privacy/download_ner_model.py",
]

[tool.coverage.report]
show_missing = true
skip_covered = true
fail_under = 80
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.",
    "raise NotImplementedError",
]
